# python-palm-semantic-kernel

./: 01-google-palm.ipynb  02-google-search-skill.ipynb  03-skills.ipynb  04-inline-prompt.ipynb  06-using-the-planner.ipynb  07-memory-and-embeddings.ipynb  Makefile  README.md  env.sample  pyproject.toml
