[tool.poetry]
name = "python-palm-semantic-kernel"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
semantic-kernel = "0.3.15.dev0"
jupyterlab = "^4.0.9"
google-generativeai = "^0.2.2"
asyncio = "^3.4.3"
jupyterlab-code-formatter = "^2.2.1"
black = "^23.11.0"
isort = "^5.12.0"
torch = "^2.1.1"
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
